Add Item ready partical

--- a/Shop/Views/Shop/Index.cshtml
+++ b/Shop/Views/Shop/Index.cshtml
@@ -15,12 +15,12 @@
                     @foreach (var item in Model)
                     {
                         <div class="card col-lg-6 col-xl-2" style="width: 18rem;">
-                            <img class="card-img-top" src="~/Content/img/2.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="img/2.png" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">@item.name</h5>
                                 <p class="card-text">@item.description</p>
                                 <p>@item.cost</p>
-                                <a href="@item.itemId" class="btn btn-primary">Участвовать</a>
+                                <a href="@item.itemId" class="btn btn-primary">Купить</a>
                             </div>
                         </div>
                     }
@@ -28,3 +28,4 @@
             </div>
         </div>
     </div>
+}
