--- a/Shop/Views/Shop/Add.cshtml
+++ b/Shop/Views/Shop/Add.cshtml
@@ -38,14 +38,6 @@
     </div>
 
     <div class="form-group">
-        <label class="control-label col-md-2">Важно</label>
-        <div class="col-md-10">
-            @Html.ValidationMessageFor(model => model.is_avalible, "", new { @class = "text-danger" })
-            @Html.CheckBox("is_avalible", true)
-        </div>
-    </div>
-
-    <div class="form-group">
         <label class="control-label col-md-2">Стоимость</label>
         <div class="col-md-10">
             @Html.EditorFor(model => model.cost, new { htmlAttributes = new { @class = "form-control" } })
@@ -61,11 +53,17 @@
         </div>
     </div>
 
-
+    <div class="form-group">
+        <label class="control-label col-md-2">В наличии</label>
+        <div class="col-md-10">
+            @Html.ValidationMessageFor(model => model.is_avalible, "", new { @class = "text-danger" })
+            @Html.CheckBox("is_avalible", true)
+        </div>
+    </div>
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Регистрация" class="btn btn-default" />
+            <input type="submit" value="Добавить" class="btn btn-default" />
         </div>
     </div>
 </div>
