--- a/Shop/Views/Shop/Index.cshtml
+++ b/Shop/Views/Shop/Index.cshtml
@@ -15,7 +15,7 @@
                     @foreach (var item in Model)
                     {
                         <div class="card col-lg-6 col-xl-2" style="width: 18rem;">
-                            <img class="card-img-top" src="img/2.png" alt="Card image cap">
+                            <img class="card-img-top" src="~/img/Shop.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">@item.name</h5>
                                 <p class="card-text">@item.description</p>
