--- a/Shop/Views/Account/Register.cshtml
+++ b/Shop/Views/Account/Register.cshtml
@@ -39,18 +39,10 @@
     </div>
 
     <div class="form-group">
-        <label class="control-label col-md-2">Кодовая фраза</label>
+        <label class="control-label col-md-2">Адрес</label>
         <div class="col-md-10">
-            @Html.EditorFor(model => model.code_phrase, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.code_phrase, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label class="control-label col-md-2">Группа крови</label>
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.type_of_blood, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.type_of_blood, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.addres, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.addres, "", new { @class = "text-danger" })
         </div>
     </div>
 
